fix horizontal overflow

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -67,6 +67,11 @@ a {
     }
 }
 
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .head__heading, .post_state_single .post__heading {
     display: block;
     position: relative;
